...
          primaryStyle={styles.inputBox}
          renderComposer={props => (
            <Composer
              {...props}
              placeholderTextColor={colors.black}
              textInputStyle={styles.composer}
              placeholder="Write a comment"
            />
          )}
        />
        {/* <TouchableOpacity style={styles.rightButton}>
                  <Image source={images.likeFill} tintColor={colors.blue} style={styles.likeBtn} />
              </TouchableOpacity> */}
...
