appId: com.blitzapp.alenga.alse
---
- runFlow: ../subflows/launch-app.yaml
- runFlow: ../subflows/login.yaml
- tapOn: "Search"
- tapOn: "Home"
- tapOn: "Market"
- tapOn: "Profile"
- assertVisible: "Profile"
